<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:layout_height="200dp" />

    <Button
        android:layout_width="match_parent"
        android:text="@string/register_user"
        android:layout_marginStart="20dp"
        android:id="@+id/buttonRegister"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:text="@string/show_user_list"
        android:id="@+id/buttonShowlist"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:text="@string/api_data"
        android:layout_marginStart="20dp"
        android:id="@+id/buttonApi"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content" />


    <Button
        android:layout_width="match_parent"
        android:text="@string/about_"
        android:id="@+id/buttonAbout"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content" />



</LinearLayout>