<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:hint="@string/user"
            android:text="Usuario"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:hint="@string/user"
            android:id="@+id/editTextUser"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:hint="@string/contrasena"
            android:text="Contraseña"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:hint="@string/contrasena"
            android:id="@+id/editTextPassword"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:text="@string/login"
        android:id="@+id/buttonLogin"
        android:backgroundTint="@color/purple_700"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content" />

</LinearLayout>